texi2html/test/invalid/titlepage_not_closed.texi
\input texinfo @c -*-texinfo-*-

@node Top

texte


@titlepage

This is in title page


@titlepage

And still in title page

